<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_all"
        android:title="@string/all"
        />
    <item
        android:id="@+id/menu_ryan"
        android:title="@string/ryan"
        android:icon="@drawable/tag_ryan"
        />
    <item
        android:id="@+id/menu_muzi"
        android:title="@string/muzi"
        android:icon="@drawable/tag_muzi"
        />
    <item
        android:id="@+id/menu_apeach"
        android:title="@string/apeach"
        android:icon="@drawable/tag_apeach"
        />
    <item
        android:id="@+id/menu_frodo"
        android:title="@string/frodo"
        android:icon="@drawable/tag_frodo"
        />
    <item
        android:id="@+id/menu_neo"
        android:title="@string/neo"
        android:icon="@drawable/tag_neo"
        />
    <item
        android:id="@+id/menu_tube"
        android:title="@string/tube"
        android:icon="@drawable/tag_tube"
        />
    <item
        android:id="@+id/menu_jay_g"
        android:title="@string/jay_g"
        android:icon="@drawable/tag_jay_g"
        />
    <item
        android:id="@+id/menu_con"
        android:title="@string/con"
        android:icon="@drawable/tag_con"
        />
</menu>